feat: Added swagger to all application endpoints and fixed responses
